--- a/pages/bioinfo/notes/20210403-genn-m-waterfall.html
+++ b/pages/bioinfo/notes/20210403-genn-m-waterfall.html
@@ -64,7 +64,7 @@ var _hmt = _hmt || [];
 
   <h1>需求描述</h1>
 <p>用R代码画出paper里的这种瀑布图。</p>
-<p><img src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210403125145.pdf" referrerpolicy="no-referrer"></p>
+<iframe height="130px" src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210403125145.pdf"></iframe>
 <p>出自<a href='https://www.cell.com/cell/abstract/S0092-8674(17)30639-6' target='_blank' class='url'>https://www.cell.com/cell/abstract/S0092-8674(17)30639-6</a></p>
 <h1>使用场景</h1>
 <p>展示多个样本中多个基因的突变情况，包括但不限于SNP、indel、CNV。</p>
@@ -182,7 +182,7 @@ oncoplot(maf = maf,
          writeMatrix =T)
 dev.off()
 </code></pre>
-<p><img src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210403125227.pdf" referrerpolicy="no-referrer"></p>
+<iframe height="130px" src="https://ruiprime-pic.cn-sh2.ufileos.com/pic/20210403125227.pdf"></iframe>
 <p>还可以按样本信息来分组。这里按人种来分组，你还可以按照其他感兴趣的特征来分组，例如是否有病毒感染、基因型、生存信息等</p>
 <pre><code class='language-r' lang='r'>#png(&quot;oncoplotGroup.png&quot;,width = 1000,height = 500)
 pdf(&quot;oncoplotGroup.pdf&quot;,width = 15,height = 10)
